[gd_scene load_steps=3 format=3 uid="uid://bv11dpyos3mnn"]

[ext_resource type="Script" path="res://scenes/levels/farm/farm_challenge_area.gd" id="1_psrf6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cetj3"]
size = Vector2(168, 120)

[node name="ChallengeArea" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_psrf6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(84, 60)
shape = SubResource("RectangleShape2D_cetj3")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Point1" type="Node2D" parent="."]

[node name="Point2" type="Node2D" parent="."]
position = Vector2(168, 0)

[node name="Point3" type="Node2D" parent="."]
position = Vector2(0, 120)

[node name="Point4" type="Node2D" parent="."]
position = Vector2(168, 120)
